# staticnest-cli

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml  yank.yml
examples/docs-site/: navigation.yml  site.toml
examples/docs-site/content/docs/: getting-started.md
examples/docs-site/theme/assets/: custom.css  custom.js
examples/docs-site/theme/templates/: page.html
src/staticnest/: __init__.py  __main__.py  cli.py  devserver.py  markdown.py  scaffold.py  simpleyaml.py  site.py  theme.py
tests/: test_cli.py  test_devserver.py  test_markdown.py  test_navigation_config.py  test_scaffold.py  test_simpleyaml.py  test_site.py  test_theme.py
