[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "staticnest-cli"
dynamic = ["version"]
description = "A custom Python static site generator for polished documentation websites."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Akash B"}]
maintainers = [
  {name = "Akash B", email = "akashbasa8@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools_scm]
# Basic config https://setuptools-scm.readthedocs.io/en/latest/
version_scheme = "only-version"
local_scheme   = "no-local-version"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests"
]

[project.scripts]
staticnest = "staticnest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
